fix: missing flex-wrap

--- a/sass/_download.scss
+++ b/sass/_download.scss
@@ -22,6 +22,8 @@ body {
 
         div.button-container {
             display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
             gap: 8px;
         }
     }
